# adamghill.com

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  justfile  middleware.py  pyproject.toml
.github/workflows/: deploy.yml
data/adamghill/: here.json  there.json
site/: app.py
site/content/alldjango/: index.md
site/content/alldjango/articles/: developer-marketing.md  django-inclusion-tags-can-modify-page-context.md  essential-django-packages.md  index.md  optimize-the-django-orm.md  python-packaging-2023-comparison.md  searching-within-area-geodjango-postgis.md  serve-multiple-django-sites-from-one-cloud-server.md
site/content/alldjango/tips/: add-query-string-template-tag.md  async-django.md  django-wagtail-reversion-magic.md  index.md  unique-obfuscated-urls-django.md  url-slugs.md
site/content/post/: sprinkling-some-magic-into-django.md
site/data/adamghill/: elsewhere.json  there.json
site/static/css/: adamghill.css
site/static/css/isitwebscale/: dots.css  gh-fork-ribbon.css  styles.css
site/templates/adamghill/: index.html
site/templates/adamghill/gitego/: base.html  index.html
site/templates/adamghill/python-utils/: index.html
site/templates/alldjango/: _related_contents.html  base.html
sites/: app.py  coltrane.toml
sites/adamghill/content/: isitwebscale.json
sites/adamghill/data/: here.json
sites/adamghill/templates/: index.html  isitwebscale.html
sites/adamghill/templates/gitego/: _header.html  base.html
sites/adamghill/templates/python-utils/: base.html  index.html
sites/alldjango/content/: index.md
sites/alldjango/content/articles/: index.md  (+2 more)
sites/alldjango/templates/: _contents.html  _hello.md  _related_contents.html  base.html
static/css/: adamghill.css
static/js/: isitwebscale.js
templates/: index.html  isitwebscale.html
templates/python-utils/: base.html  index.html
(+13 files in other folders)
