[project]
name = "site"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
authors = [
    { name = "adamghill", email = "adamghill@yahoo.com" },
]
dependencies = [
  "coltrane[angles, compressor, deploy, json5] >= 0.38.6",
  "glom>=23,<24",
  "httpx>=0,<1",
  "django-unicorn>=0.57.1,<0.58.0",
  "django-compressor>=4.4,<5.0",
  "redis>=5.0.1,<6.0.0",
  "hiredis>=2.3.2,<3.0.0",
  "iso8601 < 3",
  "django-cache-memoize < 1",
  "python-benedict < 1",
  "refreshcss >= 0.5.1",
  "emoji-data-python >= 1.6.0",
]

[tool.uv.sources]
#coltrane = { path = "../coltrane", editable = true }
#refreshcss = { path = "../refreshcss", editable = true }

[tool.ruff]
src = ["."]
exclude = []
target-version = "py310"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore unused variables
  "F841",
   # Ignore exception strings
  "EM101", "EM102",
  # Conflicts with formatter
  "ISC001"
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = [
  "tests",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
